# ChangeLog for x11-libs/cairo
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.186 2008/06/07 19:01:26 ken69267 Exp $

  07 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> cairo-1.6.4.ebuild:
  amd64 stable, bug #224929

  07 Jun 2008; nixnut <nixnut@gentoo.org> cairo-1.6.4.ebuild:
  Stable on ppc wrt bug 224929

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> cairo-1.6.4.ebuild:
  alpha/ia64/sparc/x86 stable wrt #224929

  05 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> cairo-1.6.4.ebuild:
  fixed typo in ebuild. Fixes bug 224955.

  04 Jun 2008; Markus Rothe <corsair@gentoo.org> cairo-1.6.4.ebuild:
  Stable on ppc64; bug #224929

  04 Jun 2008; Doug Goldstein <cardoe@gentoo.org>
  -files/cairo-1.6.2-fix-g++-linking.patch,
  -files/cairo-1.6.2-mutex-crash-fix.patch, -cairo-1.5.18.ebuild,
  -cairo-1.5.20.ebuild, cairo-1.6.4.ebuild:
  remove 1.6.x pre-releases

  11 Apr 2008; Doug Goldstein <cardoe@gentoo.org> cairo-1.6.4.ebuild:
  I fail. Forgot to remove epatch calls

*cairo-1.6.4 (11 Apr 2008)

  11 Apr 2008; Doug Goldstein <cardoe@gentoo.org> -cairo-1.6.2.ebuild,
  +cairo-1.6.4.ebuild:
  bump to cairo 1.6.4 which includes the previous 1.6.2 patches

*cairo-1.6.2 (11 Apr 2008)

  11 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/cairo-1.6.2-fix-g++-linking.patch, +cairo-1.6.2.ebuild:
  add working cairo 1.6.x release with g++ linking patch and mutex crash fix

*cairo-1.5.20 (08 Apr 2008)

  08 Apr 2008; Doug Goldstein <cardoe@gentoo.org> -cairo-1.5.16.ebuild,
  +cairo-1.5.20.ebuild:
  add latest cairo 1.6 release candidate

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> cairo-1.4.14.ebuild:
  alpha/ia64/sparc/x86 stable wrt #216774

  08 Apr 2008; Jeroen Roovers <jer@gentoo.org> cairo-1.4.14.ebuild:
  Stable for HPPA (bug #216774).

  07 Apr 2008; Samuli Suominen <drac@gentoo.org> cairo-1.4.14.ebuild:
  stable amd64, bug 216774
