@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/cairo-1.6.4.ebuild,v 1.8 2008/06/07 19:01:26 ken69267 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/cairo-1.6.4.ebuild,v 1.9 2008/06/13 18:50:41 cardoe Exp $
 
 EAPI="prefix"
 
@@ -14,6 +14,9 @@ LICENSE="|| ( LGPL-2.1 MPL-1.1 )"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
 IUSE="debug directfb doc glitz opengl svg test X xcb aqua"
+
+# Test causes a circular depend on gtk+... since gtk+ needs cairo but test needs gtk+ so we need to block it
+RESTRICT="test"
 
 RDEPEND="media-libs/fontconfig
 		>=media-libs/freetype-2.1.9
@@ -34,21 +37,12 @@ RDEPEND="media-libs/fontconfig
 
 DEPEND="${RDEPEND}
 		>=dev-util/pkgconfig-0.19
-		test? (
-				virtual/ghostscript
-				>=app-text/poppler-bindings-0.4.1
-				x11-libs/pango
-				x11-libs/gtk+
-				svg? ( >=gnome-base/librsvg-2.15.0 )
-			)
 		X? ( x11-proto/renderproto
 			xcb? ( x11-proto/xcb-proto ) )
 		doc?	(
 					>=dev-util/gtk-doc-1.6
 					 ~app-text/docbook-xml-dtd-4.2
 				)"
-
-RESTRICT="test"
 
 src_unpack() {
 	unpack ${A}
